Added the start page.

--- a/src/app/partials/main/main.component.html
+++ b/src/app/partials/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="body" [ngClass]="sizeClass()">
     <div class="container">
-        <div class="frame">
+        <main class="frame">
             <router-outlet />
-        </div>
+        </main>
     </div>
 </div>
