--- a/src/app/partials/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/partials/sidebar-menu/sidebar-menu.component.html
@@ -4,7 +4,7 @@
             <i class="fa-solid fa-bars"></i>
         </button>
         @if (!isSidebarMenuCollapsed()) {
-        <h1 class="logo-text">Sci-Fi Kaféet</h1>
+        <h1 class="logo-text">Rymdrosten</h1>
         <button class="btn-close" (click)="closeSidenav()">
             <i class="fa-solid fa-xmark fa-times close-icon"></i>
         </button>
@@ -29,10 +29,6 @@
     <button (click)="toggleCollapse()">
         <i class="fa-solid fa-bars"></i>
     </button>
-    <h1 class="logo-text">Sci-Fi Kaféet</h1>
+    <h1 class="logo-text">Rymdrosten</h1>
 </div>
 }
-
-<!-- <button class="logo " (click)="toggleCollapse()">
-    <i class="fa-solid fa-bars"></i>
-</button> -->
