Added a footer, cutting the descriptions in the menu to under 100 chars ending at last space, increased description length from 300 to 2000.

--- a/src/app/pages/cafe-menu/cafe-menu.component.html
+++ b/src/app/pages/cafe-menu/cafe-menu.component.html
@@ -34,7 +34,7 @@
         </div>
         <div class="header-desc">
             <h3>{{item.name.normal}}</h3>
-            <p class="description">{{item.description}}</p>
+            <p class="description">{{productDescription(item.description)}}</p>
         </div>
         <p class="rating">
             {{setRating(item.rating)}}
