--- a/src/app/partials/main/main.component.html
+++ b/src/app/partials/main/main.component.html
@@ -4,4 +4,20 @@
             <router-outlet />
         </main>
     </div>
+    
 </div>
+<footer>
+        <article>
+            <h4>Kontakt:</h4>
+            <ul>
+                <li>Address: Umeå, Vintergatan 99.</li>
+                <li>E-post: kontakt&#64;rymdrosten.se</li>
+                <li>Tel: 090 999 99 99</li>
+            </ul>
+        </article>
+        <article>
+            <h4>Webbplats:</h4>
+            <p>DT207G projekt - av Isaac Svedin, 2025-06-13.</p>
+        </article>
+
+    </footer>
