--- a/src/app/partials/main/main.component.scss
+++ b/src/app/partials/main/main.component.scss
@@ -1,19 +1,19 @@
 .body {
-//   width: calc(100% - 5rem);
+  //   width: calc(100% - 5rem);
   margin-left: 2rem;
   z-index: 0;
   position: relative;
   top: 0;
   transition: all 0.5s ease;
-//   background: #f4f7fa;
+  //   background: #f4f7fa;
   background-image: url("/techbg.png");
-  
-  background-repeat:repeat;
+
+  background-repeat: repeat;
   // background-position: 0;
   background-size: 200px;
   // background-repeat: no-repeat;
   // padding-top: 1rem;
-//   padding: 3rem;
+  //   padding: 3rem;
   padding-left: 5rem;
   padding-bottom: 6rem;
   min-height: 100vh;
@@ -21,13 +21,35 @@
 }
 
 .body-trimmed {
-//   width: calc(100% - 18.5625rem);
+  //   width: calc(100% - 18.5625rem);
   padding-left: 18.5625rem;
 }
 
 .body-md-screen {
   width: calc(100% - 5rem);
   margin-left: 5rem;
+}
+
+footer {
+  padding-top: 2rem;
+  padding-left: 7rem;
+  padding-bottom: 1rem;
+  background-color: #1b0020;
+  box-shadow: 0.063rem 0 1.25rem 0 #ce12a5;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+
+  h4 {
+    margin-top: 0;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    line-height: 1.7rem;
+  }
 }
 @media screen and (max-width: 700px) {
   .body {
@@ -37,6 +59,10 @@
   }
   .body-md-screen {
     margin-left: 0;
+  }
+
+  footer {
+    padding-left: 1rem;
   }
 }
 // @media screen and (max-width: 500px) {
