--- a/src/app/pages/cafe-menu-details/cafe-menu-details.component.scss
+++ b/src/app/pages/cafe-menu-details/cafe-menu-details.component.scss
@@ -1,24 +1,28 @@
 h2 {
-    justify-self: left;
+    // justify-self: left;
 }
 
 .product {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2rem;
-}
-
-.image-holder {
-    max-width: 350px;
-    aspect-ratio: 1/1;
-    width: 100%;
-    overflow: hidden;
-    border-radius: 1rem;
-
-    img {
+    min-height: 21rem;
+    .image-holder {
+        max-width: 350px;
+        aspect-ratio: 1/1;
         width: 100%;
-        height: auto;
+        overflow: hidden;
+        border-radius: 1rem;
+        float: left;
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+    h2 {
+        width: 100%;
+    }
+    p {
+        text-align: justify;
     }
 }
 
@@ -49,7 +53,7 @@ h2 {
         margin-top: 2rem;
         margin-bottom: 0;
     }
-    
+
     .buttons {
         position: absolute;
         bottom: 0;
@@ -74,7 +78,7 @@ h2 {
     width: 100%;
     .image-holder {
         width: 75%;
-      
+
         border-radius: 50%;
         display: flex;
         justify-content: center;
@@ -89,13 +93,13 @@ h2 {
         grid-area: 1/2/2/3;
         // margin-top: 3rem;
 
-        h4, p {
+        h4,
+        p {
             margin: 0;
         }
         h4 {
             margin-bottom: 1rem;
         }
-        
     }
 
     .actions {
@@ -122,7 +126,7 @@ h2 {
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+
         .image-holder {
             width: 40%;
             max-width: 100px;
