--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -86,7 +86,7 @@
 } @else {
 @if (!isLoading()) {
 <div class="loading">
-    Lägg till den första recensionen!
+    Det finns ingen aktivitet att visa än.
 </div>
 }
 }
