--- a/src/app/pages/cafe-menu-details/cafe-menu-details.component.scss
+++ b/src/app/pages/cafe-menu-details/cafe-menu-details.component.scss
@@ -1,7 +1,3 @@
-h2 {
-    // justify-self: left;
-}
-
 .product {
     min-height: 21rem;
     .image-holder {
@@ -64,13 +60,14 @@ h2 {
     .posting {
         display: flex;
 
-        .add {
+        .cancel {
             border-top-left-radius: 1rem;
         }
 
-        .cancel {
+        .add {
             border-bottom-right-radius: 1rem;
         }
+        
     }
 }
 
@@ -107,7 +104,6 @@ h2 {
         width: 100%;
         display: flex;
         align-items: center;
-        column-gap: 1rem;
         small {
             margin-left: auto;
             line-height: 2rem;
@@ -115,9 +111,16 @@ h2 {
         }
     }
 
-    .delete-review {
+    .edit-review {
         border-top-left-radius: 1rem;
+    }
+
+    .delete-review {
+        
         border-bottom-right-radius: 1rem;
+    }
+    .delete-review:nth-child(2){
+        border-top-left-radius: 1rem;
     }
 }
 
@@ -146,14 +149,16 @@ h2 {
         .actions {
             display: flex;
             flex-direction: column;
-            row-gap: 1rem;
             small {
                 margin: 0;
             }
 
+            .edit-review {
+                border-top-left-radius: 0;
+                width: 100%;
+            }
             .delete-review {
                 width: 100%;
-                border-top-left-radius: 0;
             }
         }
     }
